--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     include-message: always
 
 nbe:
-  url: http://196.191.76.123:8085/nbereport/public/
+  url:${NBE_URL}
 
 spring:
   config:
