--- a/env.properties
+++ b/env.properties
@@ -3,4 +3,4 @@ DB_USER=sa
 DB_PASSWORD=Today1234
 GMAIL_USERNAME= info@raysmfi.com
 GMAIL_PASSWORD= rmckkocxrltqgvok
-NBE_URL=http://196.191.76.123:8085/nbereport/public/
+NBE_URI=http://196.191.76.123:8085/nbereport/public/
